<?xml version="1.0"?>
<package format="2">
  <name>g1_horizon</name>
  <version>0.0.0</version>
  <description>The g1_horizon package</description>

  <maintainer email="ioannis.tsikelis@inria.fr">itsikelis</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
